--- a/src/components/data/projects.json
+++ b/src/components/data/projects.json
@@ -1,10 +1,10 @@
 [
   {
-    "title": "Project A",
+    "title": "Personal Website",
     "imageSrc": "projects/project.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
-    "skills": ["React", "Express", "Node"],
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "description": "This is a project learning how to build and host website",
+    "skills": ["React", "Javascript", "CSS", "HTML"],
+    "demo": "https://lyam-t.github.io/personal_profolio.io/",
+    "source": "https://github.com/Lyam-T/personal_profolio.io"
   }
 ]
